# BSDsystem-Deepnight

./: .gitignore  README.md  augment_data.py  collect_data.py  collect_raw.py  compare_baseline_results.json  generate_labels.py  main.py  train.py
configs/: camera_config.yaml  morai.yaml  sgldet_config.yaml
docs/: ai_usage.md
models/: __init__.py  sgldet_yolov8.py  sort_tracker.py
ros2_ws/: README.md
ros2_ws/src/bsd_deepnight/: package.xml  setup.cfg  setup.py
ros2_ws/src/bsd_deepnight/bsd_deepnight/: __init__.py  detector_node.py
ros2_ws/src/bsd_deepnight/launch/: bsd_detector.launch.py
scripts/: bsd_debug.py  compare_baseline.py  demo_bsd.py  demo_tracker.py  evaluate_day_vs_night.py  evaluate_map.py  evaluate_map_newdata.py  evaluate_map_no_leak.py  make_split_files.py  make_split_files_scenario.py  monitor_training.sh  topic_registrar.py  train_baseline_freeze.py  train_baseline_ft.py  train_baseline_ft_scn.py
src/: __init__.py
src/datasets/: __init__.py  morai_dataset.py  transforms.py
src/inference/: __init__.py  bsd_interface.py  detector.py
src/preprocessing/: __init__.py  calibration.py  coord_transform.py
